@@ -45,6 +45,10 @@
  			<label index="status_phpRegisterGlobalsPHPManual">The PHP manual has instructions for %s.</label>
  			<label index="status_webServer">Web Server</label>
 			<label index="status_installEnabledTemporarily">The Install Tool is temporarily enabled. Delete the file &quot;%s&quot; when you have finished setting up TYPO3. If not used the Install Tool will be disabled automatically in %s minutes.</label>
+			<label index="status_configuration_DeprecationLog">Deprecation Log</label>
+			<label index="status_configuration_DeprecationLogEnabled">The deprecation log tracks whether old APIs are being used in extensions. Depending on the extensions you use and whether they use deprecated APIs it can happen that the log takes up quite some space over time. The more space it takes up, the more it may affect your installation's performance. It is recommended to disable deprecation log in production environments.</label>
+			<label index="status_configuration_DeprecationLogFile">You can find the deprecation log file at %s.</label>
+			<label index="status_configuration_DeprecationLogSize">Your deprecation log file currently takes up %s.</label>
 		</languageKey>
 	</data>
 </T3locallang>
